syntax = "proto3";

option optimize_for = SPEED;

option cc_enable_arenas = true;

package NAapi;

message THash {
    bytes Hash = 1;
}

message TObject {
    bytes Hash = 1;
    bytes Blob = 2;  // type and data
}

message TDirectory {
    string Path = 1;
    bytes Hash = 2;
    bytes Blob = 3;  // type and data
}

message TDirectories {
    repeated TDirectory Directories = 1;
}

message THashes {
    repeated bytes Hashes = 1;
}

message TObjects {
    repeated bytes Data = 1;
}

message TEmpty {
    bytes Empty = 1;
}

message TDiffRequest {
    bytes Hash1 = 1;
    bytes Hash2 = 2;
}

message TDiffElement {
    string Path = 1;
    uint64 Mode = 2;
    uint64 Status = 3;
}

message TRevision {
    uint64 Revision = 1;
}

message TName {
    string Name = 1;
}
